# game_of_life

./: .gitignore  CMakeLists.txt  LICENSE  README.md  field.cpp  field.h  game.cpp  game.h  input_parser.cpp  input_parser.h  main.cpp  tests.cpp
examples/: 54-iterations  gun
